[project]
name = "backloop"
version = "0.1.0"
description = "Simple backtester"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
# Target Python version
target-version = "py310"

# Enable a broad set of rule categories
# (E,F = pycodestyle/flake8 errors, W = warnings,
#  I = import sorting, N = pep8-naming,
#  D = pydocstyle, UP = pyupgrade, B = bugbear,
#  C4 = comprehensions, RUF = Ruff-specific)
select = [
    "E", "F", "W",
    "I",
    "N",
    "D",
    "UP",
    "B",
    "C4",
    "RUF"
]

# Exclude some rules that are often too strict / noisy
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

# Line length (match black default if you use black)
line-length = 88

# How many autofix iterations to run
fix = true
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
# Allow tests to have prints and asserts
"tests/*" = ["D", "S101"]

[tool.ruff.isort]
# Import sorting config
combine-as-imports = true
force-single-line = false
known-first-party = ["backloop"]
